# Minds

./: README.md  app.py  demo.py  main.py  pyproject.toml  requirements.txt  setup.py
framework/core/: agents.py  base_agent.py  kernel.py
framework/integrations/: llm.py
framework/meta/: analyst.py  architect.py  deployment.py  developer.py
minds/: __init__.py
minds/agents/: base.py  system.py  worker.py
minds/core/: models.py
minds/kernel/: __init__.py  kernel.py
src/janus/: agent.py  memory.py  models.py  orchestrator.py  tool.py
tasks/: dynamic_delegation_task.py
tests/: test_agent.py  test_agents.py  test_kernel.py  test_memory.py  test_orchestrator.py  test_tool.py
