[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "janus-framework"
version = "0.0.1"
description = "Janus AI Agent Framework"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0,<3.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["janus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
